--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="sec3__prod">
           <img class="sec3__prod-img sec3__prod-img--1" width="200" src="img/rose.png" /><img
-            class="sec3__prod-img sec3__prod-img--2" src="img/prod27.png" /><img
+            class="sec3__prod-img sec3__prod-img--2" src="img/both.png" /><img
             class="sec3__prod-img sec3__prod-img--3" src="img/nuts.png" />
         </div>
         <img class="sec3__woman" src="img/woman2.png" />
@@ -404,22 +404,7 @@
         </div>
       </div>
       <hr />
-      <div class="last_child_ftr">
-        <p>
-          هذا المنتج ليس للاستخدام أو البيع للأشخاص الذين تقل أعمارهم عن 18 عامًا. يجب استخدام هذا المنتج فقط وفقًا
-          للتوجيهات الموجودة على الملصق.
-          <br />
-          لا ينبغي أن تستخدمي هذا المنتج إذا كنت حاملا أو مرضعة. استشيري الطبيب قبل
-          الاستخدام إذا كنت تعانين من حالة طبية خطيرة أو كنت تستخدمين أدوية خاصة.
-          <br />
-          جميع العلامات التجارية وحقوق التأليف
-          والنشر هي ملك لأصحابها وليست تابعة ولا تؤيد تحاميل تكبير المؤخرة والأرداف. هذه البيانات لم يتم تقييمها من قبل
-          ادارة الاغذية والعقاقير.
-          <br />
-          لا يهدف هذا المنتج إلى تشخيص أي مرض أو علاجه أو الوقاية منه. تختلف النتائج الفردية.
-          باستخدام هذا الموقع ، فإنك توافق على اتباع سياسة الخصوصية وجميع الشروط والأحكام المطبوعة على هذا الموقع.
-        </p>
-      </div>
+      
     </footer>
   </div>
   <script type="text/javascript">
