--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
             <button>أطلبي الآن</button>
           </div>
         </div>
-
       </div>
     </div>
     <div class="sec3">
@@ -167,9 +166,9 @@
           <button>أطلبي الآن مع تخفيض %50</button>
         </div>
         <div class="sec3__prod">
-          <img class="sec3__prod-img sec3__prod-img--1" width="200" src="img/rose.png" /><img
-            class="sec3__prod-img sec3__prod-img--2" src="img/both.png" /><img
-            class="sec3__prod-img sec3__prod-img--3" src="img/nuts.png" />
+          <img class="sec3__prod-img sec3__prod-img--1" width="200" src="./img/rose.png" /><img
+            class="sec3__prod-img sec3__prod-img--2" src="./img/both.png" /><img class="sec3__prod-img sec3__prod-img--3"
+            src="./img/nuts.png" />
         </div>
         <img class="sec3__woman" src="img/woman2.png" />
       </div>
@@ -182,7 +181,7 @@
         </div>
         <div class="sec4__items">
           <div class="sec4__item clearfix">
-            <img src="img/item1.png" />
+            <img src="./img/item1.png" />
             <div class="sec4__text">
               <div class="sec4__i-title">بروتين الصويا</div>
               يساعد جسمك على الحفاظ على كتلة العضلات ويحافظ على عضلاتك قوية و
@@ -404,7 +403,6 @@
         </div>
       </div>
       <hr />
-      
     </footer>
   </div>
   <script type="text/javascript">
