--- a/index.html
+++ b/index.html
@@ -56,6 +56,48 @@
 
 <body>
   <div class="contaier">
+    <div class="sec2">
+      <div class="wrapper clearfix">
+        <div class="sec2__left">
+          <div class="sec2__arrow">
+            <div class="sec2__arrow-i-1">
+              <div class="sec2__arrow-text1">
+                خليهوم يتبعوك بعينيهم و خلي راجلك يتشهاك كل نهار
+              </div>
+            </div>
+          </div>
+          <div class="sec2__product">
+            <img src="./img/both.png" alt="">
+          </div>
+          <div class="sec2__list">
+            <ul>
+              <li>يعمل على تحسين شكل مؤخرتك</li>
+              <li>زيادة الكتلة العضلية</li>
+              <li>خلق مظهر مؤخرة أكثر إمتلاء و أكثر تناسق</li>
+            </ul>
+          </div>
+          <div class="sec2__dash">
+            <b> PACK BOOST </b>
+            <br />
+            <p>الحل الأمثل لتكبير المؤخرة</p>
+          </div>
+        </div>
+      </div>
+      <div class="__items clearfix">
+        <img class="sec5__item" src="img/1.jpg" />
+        <img class="sec5__item" src="img/sec5_2.png" />
+        <img class="sec5__item" src="img/sec5_3.png" />
+        <img class="sec5__item" src="img/ar1.jpg" />
+        <img class="sec5__item" src="img/sec2_4.jpg" />
+        <img class="sec5__item" src="img/booty_ass_02.gif" />
+        <img class="sec5__item" src="img/ar2.jpg" />
+        <img class="sec5__item" src="img/nz1s1h.jpg" />
+
+      </div>
+      <div class="_btn_hnalder exacr">
+        <button>أطلبي الآن</button>
+      </div>
+    </div>
     <div class="sec1">
       <div class="wrapper">
         <img class="sec1__woman" src="img/woman2.png" /><img class="sec1__rose" src="img/rose.png" />
@@ -85,51 +127,6 @@
         </div>
         <div class="_btn_hnalder">
           <button>أطلبي الآن</button>
-        </div>
-      </div>
-    </div>
-    <div class="sec2">
-      <div class="wrapper clearfix">
-        <div class="sec2__left">
-          <div class="title">
-            <div>حول PACK BOOST</div>
-          </div>
-          <div class="sec2__arrow">
-            <div class="sec2__arrow-i-1">
-              <div class="sec2__arrow-text1">
-                خليهوم يتبعوك بعينيهم و خلي راجلك يتشهاك كل نهار
-              </div>
-            </div>
-          </div>
-          <div class="sec2__list">
-            <ul>
-              <li>يعمل على تحسين شكل مؤخرتك</li>
-              <li>زيادة الكتلة العضلية</li>
-              <li>خلق مظهر مؤخرة أكثر إمتلاء و أكثر تناسق</li>
-            </ul>
-          </div>
-          <div class="sec2__dash">
-            <b> PACK BOOST </b>
-            <br />
-            <p>الحل الأمثل لتكبير المؤخرة</p>
-          </div>
-        </div>
-        <div class="situation">
-          <img src="./img/situation.jpg" alt="">
-        </div>
-        <div class="_btn_hnalder exacr">
-          <button>أطلبي الآن</button>
-        </div>
-        <div class="sec2__right">
-          <img class="sec2__rose" src="img/rose2.png" />
-          <img class="sec2__image sec2__image--1" src="img/ar1.jpg" />
-          <img class="sec2__image sec2__image--2" src="img/booty_ass_01.gif" />
-          <img class="sec2__image sec2__image--3" src="img/booty_ass_02.gif" />
-          <img class="sec2__arrows" src="img/arrows.png" />
-          <img class="sec2__arrows--animate" src="img/arrow3.png" />
-          <div class="_btn_hnalder exacd">
-            <button>أطلبي الآن</button>
-          </div>
         </div>
       </div>
     </div>
@@ -167,8 +164,8 @@
         </div>
         <div class="sec3__prod">
           <img class="sec3__prod-img sec3__prod-img--1" width="200" src="./img/rose.png" /><img
-            class="sec3__prod-img sec3__prod-img--2" src="./img/both.png" /><img class="sec3__prod-img sec3__prod-img--3"
-            src="./img/nuts.png" />
+            class="sec3__prod-img sec3__prod-img--2" src="./img/both.png" /><img
+            class="sec3__prod-img sec3__prod-img--3" src="./img/nuts.png" />
         </div>
         <img class="sec3__woman" src="img/woman2.png" />
       </div>
@@ -307,13 +304,7 @@
       <div class="sec5">
         <div class="wrapper">
           <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
-          <div class="sec5__items clearfix">
-            <img class="sec5__item" src="img/sec5_2.png" />
-            <img class="sec5__item" src="img/sec5_3.png" />
-            <img class="sec5__item" src="img/ar1.jpg" />
-            <img class="sec5__item" src="img/sec2_4.jpg" />
-            <img class="sec5__item" src="img/booty_ass_02.gif" />
-          </div>
+          
         </div>
         <div class="orange">
           <div class="wrapper">
@@ -393,12 +384,7 @@
         </div>
         <div>
           <p>
-            Copyright © 2022 AKCHAR Terms & Conditions | Privacy Policy |
-            Disclaimer
-            <br />
-            THIS SITE IS NOT A PART OF THE FACEBOOK WEBSITE OR FACEBOOK INC.
-            ADDITIONALLY, THIS SITE IS NOT ENDORSED BY FACEBOOK IN ANY WAY.
-            FACEBOOK IS A TRADEMARK OF FACEBOOK, INC.
+            Copyright © 2022 AKCHAR 
           </p>
         </div>
       </div>
