--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-  <link href="./img/akcharLogo.png" rel="shortcut icon" type="image/png" />
-  <link href="css/normalize.css" rel="stylesheet" />
-  <link href="css/main.css" rel="stylesheet" />
+  <link href="./assets/img/akcharLogo.png" rel="shortcut icon" type="image/png" />
+  <link href="./assets/css/normalize.css" rel="stylesheet" />
+  <link href="./assets/css/main.css" rel="stylesheet" />
   <title>PACK BOOST</title>
   <script>
     !function (f, b, e, v, n, t, s) {
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="sec2__product">
-            <img src="./img/both.png" alt="">
+            <img src="././assets/img/both.png" alt="">
           </div>
           <div class="sec2__list">
             <ul>
@@ -84,14 +84,14 @@
         </div>
       </div>
       <div class="__items clearfix">
-        <img class="sec5__item" src="img/1.jpg" />
-        <img class="sec5__item" src="img/sec5_2.png" />
-        <img class="sec5__item" src="img/sec5_3.png" />
-        <img class="sec5__item" src="img/ar1.jpg" />
-        <img class="sec5__item" src="img/sec2_4.jpg" />
-        <img class="sec5__item" src="img/booty_ass_02.gif" />
-        <img class="sec5__item" src="img/ar2.jpg" />
-        <img class="sec5__item" src="img/nz1s1h.jpg" />
+        <img class="sec5__item" src="./assets/img/1.jpg" />
+        <img class="sec5__item" src="./assets/img/sec5_2.png" />
+        <img class="sec5__item" src="./assets/img/sec5_3.png" />
+        <img class="sec5__item" src="./assets/img/ar1.jpg" />
+        <img class="sec5__item" src="./assets/img/sec2_4.jpg" />
+        <img class="sec5__item" src="./assets/img/booty_ass_02.gif" />
+        <img class="sec5__item" src="./assets/img/ar2.jpg" />
+        <img class="sec5__item" src="./assets/img/nz1s1h.jpg" />
 
       </div>
       <div class="_btn_hnalder exacr">
@@ -100,8 +100,8 @@
     </div>
     <div class="sec1">
       <div class="wrapper">
-        <img class="sec1__woman" src="img/woman2.png" /><img class="sec1__rose" src="img/rose.png" />
-        <img class="sec1__prod" src="img/both.png" />
+        <img class="sec1__woman" src="./assets/img/woman2.png" /><img class="sec1__rose" src="./assets/img/rose.png" />
+        <img class="sec1__prod" src="./assets/img/both.png" />
         <div class="sec1__right clearfix">
           <div class="sec1__title">
             <span> PACK BOOST </span>
@@ -163,11 +163,11 @@
           <button>أطلبي الآن مع تخفيض %50</button>
         </div>
         <div class="sec3__prod">
-          <img class="sec3__prod-img sec3__prod-img--1" width="200" src="./img/rose.png" /><img
-            class="sec3__prod-img sec3__prod-img--2" src="./img/both.png" /><img
-            class="sec3__prod-img sec3__prod-img--3" src="./img/nuts.png" />
+          <img class="sec3__prod-img sec3__prod-img--1" width="200" src="./assets/img/rose.png" /><img
+            class="sec3__prod-img sec3__prod-img--2" src="./assets/img/both.png" /><img
+            class="sec3__prod-img sec3__prod-img--3" src="./assets/img/nuts.png" />
         </div>
-        <img class="sec3__woman" src="img/woman2.png" />
+        <img class="sec3__woman" src="./assets/img/woman2.png" />
       </div>
     </div>
     <div class="sec4">
@@ -178,7 +178,7 @@
         </div>
         <div class="sec4__items">
           <div class="sec4__item clearfix">
-            <img src="./img/item1.png" />
+            <img src="./assets/img/item1.png" />
             <div class="sec4__text">
               <div class="sec4__i-title">بروتين الصويا</div>
               يساعد جسمك على الحفاظ على كتلة العضلات ويحافظ على عضلاتك قوية و
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="sec4__item clearfix">
-            <img src="img/vitae.png" />
+            <img src="./assets/img/vitae.png" />
             <div class="sec4__text">
               <div class="sec4__i-title">فيتامين E</div>
               فيتامين E هو أحد مضادات الأكسدة يساعد في تكوين بشرة أكثر نعومة
@@ -194,14 +194,14 @@
             </div>
           </div>
           <div class="sec4__item clearfix">
-            <img src="img/item2.png" />
+            <img src="./assets/img/item2.png" />
             <div class="sec4__text">
               <div class="sec4__i-title">الجوجباء</div>
               ينعم ويغذي البشرة.
             </div>
           </div>
           <div class="sec4__item clearfix">
-            <img src="img/item3.png" />
+            <img src="./assets/img/item3.png" />
             <div class="sec4__text">
               <div class="sec4__i-title">زيت بذور المكاديميا</div>
               تثير الغدد الالنخامية للترفيع في المستويات الهرمونية التي تكبر
@@ -209,10 +209,49 @@
             </div>
           </div>
           <div class="sec4__item clearfix">
-            <img src="img/item4.png" />
+            <img src="./assets/img/item4.png" />
             <div class="sec4__text">
               <div class="sec4__i-title">زبدة الشيا</div>
               يزيل آثار التمدد
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/sesame.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">نبات السمسم</div>
+              يحتوي زيت السمسم على مضادات الأكسدة وفيتامين "ه" والكالسيوم والنحاس والمغنيسيوم، وهو من الزيوت المعروفة
+              بآستخدامها في تكبير المؤخرة.
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/9em7.jpeg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">
+                زيت جنين القمح
+              </div>
+              تساعد على تكبير الأرداف لإحتوائها على فيتامين E التي تساعد على تدفق الدم في المؤخرة فيزيد بشكل طبيعي
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/argan.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">
+                أرگان
+              </div>
+              بمنافعه الكثيرة، التي لا تُعد ولا تحصى فإن أركان يساهم بشكل كبير وفعال في تكبير الأرداف 
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/zafran.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">
+                الزعفران
+              </div>
+              زيت الزعفران فعال لتكبيرالأرداف و أيضا لتكبير الصدر
             </div>
           </div>
         </div>
@@ -229,60 +268,66 @@
           <div class="first_prod">
             <div>
               <h3>
+                طريقة إستعمال كريم التحاميل
+              </h3>
+            </div>
+            <div class="prod_handler_first">
+              <img src="././assets/img/LUBI_SUPPO-1.png" alt="">
+            </div>
+            <div class="para_how_prod_works">
+              <p>
+                كريم تحاميل: رشة من الكريم توضع على كلا التحاميل قبل كل استخدام
+              </p>
+            </div>
+          </div>
+          <div class="first_prod">
+            <div>
+              <h3>
                 طريقة إستعمال التحاميل
               </h3>
             </div>
             <div class="prod_handler_first">
-              <img src="./img/LUBI_SUPPO-1.png" alt="">
+              <img src="././assets/img/suppnat.png" alt="">
             </div>
             <div class="para_how_prod_works">
-              <ul>
-                <li>يفضل نقل التحاميل إلى علبة زجاج لكي تحافظ التحاميل على طراوتها
-                </li>
-                <li>
-                  يتم استعمالها يوميًا قبل النوم مباشرة لتحصلي على مؤخرة بالحجم الذي تريدينه.
-                </li>
-                <li>
-                  يتم وضع واحدة من تلك التحاميل في الدبر ثم قومي بشرب مشروب ساخن مباشرة وتجنبي تمامًا أي مشروب بارد حتى
-                  تحصلين على نتيجة سريعة ومضمونة.
-                </li>
-                <li>
-                  قومي بعمل مساج للمؤخرة بحركة دائرية حتى يتم تنشيط الدورة الدموية وتساعد على التسمين ثم اخلدي للنوم بعد
-                  ذلك.
-                </li>
-                <li>
-                  يمكن استعمال تحميلتين في اليوم , بعد 15 يوم من بداية الإستعمال في الصباح و المساء
-                </li>
-                <li>
-                  الإكثار من تناول الفواكه و الخضراوات والبروتينات (البيض-الحليب-صدر الدجاج-السردين...)
-                </li>
-                <li>
-                  بعد شهر من استخدام تلك الوصفة باتباع التعليمات بالطريقة الصحيحة يمكنك ملاحظة الفرق.
-                </li>
-              </ul>
+              <p>
+                2 تحميلة في اليوم واحدة في الصباح وواحدة في المساء
+              </p>
+            </div>
+          </div>
+          <div class="first_prod">
+            <div>
+              <h3>
+                طريقة إستعمال كريم الأرداف
+              </h3>
+            </div>
+            <div class="prod_handler_first">
+              <img src="././assets/img/hip_up.png" alt="">
+            </div>
+            <div class="para_how_prod_works">
+              <p>
+                ضعي الكريم على بشرة نظيفة مع تدليك دائري على الأرداف لمدة 5 دقائق كل صباح بعد وضع التحميلة
+              </p>
             </div>
           </div>
           <div class="second_prod">
             <div>
               <h3>
-                طريقة إستعمال زيت التسمين
+                طريقة إستعمال زيت المعجزة
               </h3>
             </div>
             <div class="prod_handler">
-              <img src="./img/oil.png" alt="">
+              <img src="././assets/img/oil.png" alt="">
             </div>
             <div class="para_how_prod_works">
-              <p>يجب وضع منشفة ساخنة فوق المنطقة المراد ابرازها (الخدود أو الصدر أو الأرداف), بعد ذلك تضعين زيت التسمين
-                في المنطقة مع القيام بعملية التدليك لمدة 10 دقائق
-                <br />
-                يجب القيام بهذه العملية مرة أو مرتين في اليوم للحصول
-                على نتيجة مرضية.
+              <p>
+                ضع الزيت على بشرة نظيفة عن طريق التدليك بحركة دائرية على الوركين لمدة 5 دقائق كل مساء بعد وضع التحميلة
               </p>
             </div>
           </div>
           <div class="warning_use_case">
             <div>
-              <img src="./img/warning.png" alt="">
+              <img src="././assets/img/warning.png" alt="">
             </div>
             <div>
               <ul>
@@ -304,7 +349,6 @@
       <div class="sec5">
         <div class="wrapper">
           <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
-          
         </div>
         <div class="orange">
           <div class="wrapper">
@@ -327,7 +371,7 @@
               </li>
             </ul>
           </div>
-          <img class="sec5__woman" src="img/sec5__woman.png" />
+          <img class="sec5__woman" src="./assets/img/sec5__woman.png" />
         </div>
         <div class="para_sec5">
           <p>
@@ -380,11 +424,11 @@
     <footer>
       <div class="first_child_ftr">
         <div>
-          <img src="./img/akcharLogo.png" width="200" alt="" srcset="" />
+          <img src="././assets/img/akcharLogo.png" width="200" alt="" srcset="" />
         </div>
         <div>
           <p>
-            Copyright © 2022 AKCHAR 
+            Copyright © 2022 AKCHAR
           </p>
         </div>
       </div>
@@ -419,7 +463,7 @@
       });
     });
   </script>
-  <script src="./Javascript/index.js" type="text/javascript"></script>
+  <script src="./assets/Javascript/index.js" type="text/javascript"></script>
 </body>
 
 </html>
