--- a/success.html
+++ b/success.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/thannksPage.css" />
-    <link rel="shortcut icon" href="./img/akcharLogo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./assets/css/thannksPage.css" />
+    <link rel="shortcut icon" href="./assets/img/akcharLogo.png" type="image/x-icon" />
     <title>PACK BOOST</title>
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -33,7 +33,7 @@
         <p>نشكركم على طلبكم و ثقتكم</p>
         <p>لقد استلمنا طلبكم سنتصل بكم قريبا لتأكيد طلبكم</p>
         <div>
-            <img src="./img/Confirmed.gif" width="100%" height="100%" alt="" />
+            <img src="./assets/img/Confirmed.gif" width="100%" height="100%" alt="" />
         </div>
         <div>
             <button id="btn_back">الرجوع</button>
