--- a/index.html
+++ b/index.html
@@ -98,6 +98,93 @@
         <button>أطلبي الآن</button>
       </div>
     </div>
+    <div class="sec4">
+      <div class="wrapper">
+        <div class="title">مكونات PACK BOOST</div>
+        <div class="sec4__subtitle">
+          <b> مصنوع من مكونات طبيعية %100 : </b>
+        </div>
+        <div class="sec4__items">
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/item1.png" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">بروتين الصويا</div>
+              يساعد جسمك على الحفاظ على كتلة العضلات ويحافظ على عضلاتك قوية و
+              مشدودة.
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/vitae.png" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">فيتامين E</div>
+              فيتامين E هو أحد مضادات الأكسدة يساعد في تكوين بشرة أكثر نعومة
+              وشدا
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/item2.png" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">الجوجباء</div>
+              ينعم ويغذي البشرة.
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/item3.png" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">زيت بذور المكاديميا</div>
+              تثير الغدد الالنخامية للترفيع في المستويات الهرمونية التي تكبر
+              حجم المؤخرة
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/item4.png" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">زبدة الشيا</div>
+              يزيل آثار التمدد
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/sesame.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">نبات السمسم</div>
+              يحتوي زيت السمسم على مضادات الأكسدة وفيتامين "ه" والكالسيوم والنحاس والمغنيسيوم، وهو من الزيوت المعروفة
+              بآستخدامها في تكبير المؤخرة.
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/9em7.jpeg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">
+                زيت جنين القمح
+              </div>
+              تساعد على تكبير الأرداف لإحتوائها على فيتامين E التي تساعد على تدفق الدم في المؤخرة فيزيد بشكل طبيعي
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/argan.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">
+                أرگان
+              </div>
+              بمنافعه الكثيرة، التي لا تُعد ولا تحصى فإن أركان يساهم بشكل كبير وفعال في تكبير الأرداف
+            </div>
+          </div>
+          <div class="sec4__item clearfix">
+            <img src="./assets/img/zafran.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
+              height="115" width="110" />
+            <div class="sec4__text">
+              <div class="sec4__i-title">
+                الزعفران
+              </div>
+              زيت الزعفران فعال لتكبيرالأرداف و أيضا لتكبير الصدر
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="sec1">
       <div class="wrapper">
         <img class="sec1__woman" src="./assets/img/woman2.png" /><img class="sec1__rose" src="./assets/img/rose.png" />
@@ -170,270 +257,185 @@
         <img class="sec3__woman" src="./assets/img/woman2.png" />
       </div>
     </div>
-    <div class="sec4">
-      <div class="wrapper">
-        <div class="title">مكونات PACK BOOST</div>
-        <div class="sec4__subtitle">
-          <b> مصنوع من مكونات طبيعية %100 : </b>
-        </div>
-        <div class="sec4__items">
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/item1.png" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">بروتين الصويا</div>
-              يساعد جسمك على الحفاظ على كتلة العضلات ويحافظ على عضلاتك قوية و
-              مشدودة.
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/vitae.png" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">فيتامين E</div>
-              فيتامين E هو أحد مضادات الأكسدة يساعد في تكوين بشرة أكثر نعومة
-              وشدا
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/item2.png" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">الجوجباء</div>
-              ينعم ويغذي البشرة.
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/item3.png" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">زيت بذور المكاديميا</div>
-              تثير الغدد الالنخامية للترفيع في المستويات الهرمونية التي تكبر
-              حجم المؤخرة
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/item4.png" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">زبدة الشيا</div>
-              يزيل آثار التمدد
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/sesame.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
-              height="115" width="110" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">نبات السمسم</div>
-              يحتوي زيت السمسم على مضادات الأكسدة وفيتامين "ه" والكالسيوم والنحاس والمغنيسيوم، وهو من الزيوت المعروفة
-              بآستخدامها في تكبير المؤخرة.
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/9em7.jpeg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
-              height="115" width="110" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">
-                زيت جنين القمح
-              </div>
-              تساعد على تكبير الأرداف لإحتوائها على فيتامين E التي تساعد على تدفق الدم في المؤخرة فيزيد بشكل طبيعي
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/argan.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
-              height="115" width="110" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">
-                أرگان
-              </div>
-              بمنافعه الكثيرة، التي لا تُعد ولا تحصى فإن أركان يساهم بشكل كبير وفعال في تكبير الأرداف 
-            </div>
-          </div>
-          <div class="sec4__item clearfix">
-            <img src="./assets/img/zafran.jpg" style="border-radius: 100%;object-fit: cover; border: 2px solid orange;"
-              height="115" width="110" />
-            <div class="sec4__text">
-              <div class="sec4__i-title">
-                الزعفران
-              </div>
-              زيت الزعفران فعال لتكبيرالأرداف و أيضا لتكبير الصدر
-            </div>
-          </div>
-        </div>
+   
+    <div class="howtouse">
+      <div>
+        <h1>
+          طريقة إستعمال
+          <br />
+          PACK BOOST
+        </h1>
       </div>
-      <div class="howtouse">
-        <div>
-          <h1>
-            طريقة إستعمال
-            <br />
-            PACK BOOST
-          </h1>
-        </div>
-        <div class="handle_prods">
-          <div class="first_prod">
-            <div>
-              <h3>
-                طريقة إستعمال كريم التحاميل
-              </h3>
-            </div>
-            <div class="prod_handler_first">
-              <img src="././assets/img/LUBI_SUPPO-1.png" alt="">
-            </div>
-            <div class="para_how_prod_works">
-              <p>
-                كريم تحاميل: رشة من الكريم توضع على كلا التحاميل قبل كل استخدام
-              </p>
-            </div>
+      <div class="handle_prods">
+        <div class="first_prod">
+          <div>
+            <h3>
+              طريقة إستعمال كريم التحاميل
+            </h3>
           </div>
-          <div class="first_prod">
-            <div>
-              <h3>
-                طريقة إستعمال التحاميل
-              </h3>
-            </div>
-            <div class="prod_handler_first">
-              <img src="././assets/img/suppnat.png" alt="">
-            </div>
-            <div class="para_how_prod_works">
-              <p>
-                2 تحميلة في اليوم واحدة في الصباح وواحدة في المساء
-              </p>
-            </div>
+          <div class="prod_handler_first">
+            <img src="./assets/img/LUBI_SUPPO-1.png" alt="">
           </div>
-          <div class="first_prod">
-            <div>
-              <h3>
-                طريقة إستعمال كريم الأرداف
-              </h3>
-            </div>
-            <div class="prod_handler_first">
-              <img src="././assets/img/hip_up.png" alt="">
-            </div>
-            <div class="para_how_prod_works">
-              <p>
-                ضعي الكريم على بشرة نظيفة مع تدليك دائري على الأرداف لمدة 5 دقائق كل صباح بعد وضع التحميلة
-              </p>
-            </div>
-          </div>
-          <div class="second_prod">
-            <div>
-              <h3>
-                طريقة إستعمال زيت المعجزة
-              </h3>
-            </div>
-            <div class="prod_handler">
-              <img src="././assets/img/oil.png" alt="">
-            </div>
-            <div class="para_how_prod_works">
-              <p>
-                ضع الزيت على بشرة نظيفة عن طريق التدليك بحركة دائرية على الوركين لمدة 5 دقائق كل مساء بعد وضع التحميلة
-              </p>
-            </div>
-          </div>
-          <div class="warning_use_case">
-            <div>
-              <img src="././assets/img/warning.png" alt="">
-            </div>
-            <div>
-              <ul>
-                <li>لا يجب وضعها في المبرد</li>
-                <li>
-                  الابتعاد عن المشي حافية
-                </li>
-                <li>
-                  المرجو البعد عن المشروبات الباردة و الغازية
-                </li>
-                <li>
-                  اثناء الدورة الشهرية يفضل التوقف عن استعمال التحاميل حتى تنتهي فترة الحيض
-                </li>
-              </ul>
-            </div>
+          <div class="para_how_prod_works">
+            <p>
+              كريم تحاميل: رشة من الكريم توضع على كلا التحاميل قبل كل استخدام
+            </p>
           </div>
         </div>
-      </div>
-      <div class="sec5">
-        <div class="wrapper">
-          <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
+        <div class="first_prod">
+          <div>
+            <h3>
+              طريقة إستعمال التحاميل
+            </h3>
+          </div>
+          <div class="prod_handler_first">
+            <img src="./assets/img/suppnat.png" alt="">
+          </div>
+          <div class="para_how_prod_works">
+            <p>
+              2 تحميلة في اليوم واحدة في الصباح وواحدة في المساء
+            </p>
+          </div>
         </div>
-        <div class="orange">
-          <div class="wrapper">
-            <div class="orange__title">
-              تكبير <span> بمسحة </span><b> واحدة </b><span> فقط </span>
-            </div>
-            <div class="orange__title sec">
-              <span> إليكِ آلية عمل PACK BOOST </span>
-            </div>
-            <ul class="sec5__list">
+        <div class="first_prod">
+          <div>
+            <h3>
+              طريقة إستعمال كريم الأرداف
+            </h3>
+          </div>
+          <div class="prod_handler_first">
+            <img src="./assets/img/hip_up.png" alt="">
+          </div>
+          <div class="para_how_prod_works">
+            <p>
+              ضعي الكريم على بشرة نظيفة مع تدليك دائري على الأرداف لمدة 5 دقائق كل صباح بعد وضع التحميلة
+            </p>
+          </div>
+        </div>
+        <div class="second_prod">
+          <div>
+            <h3>
+              طريقة إستعمال زيت المعجزة
+            </h3>
+          </div>
+          <div class="prod_handler">
+            <img src="././assets/img/oil.png" alt="">
+          </div>
+          <div class="para_how_prod_works">
+            <p>
+              ضع الزيت على بشرة نظيفة عن طريق التدليك بحركة دائرية على الوركين لمدة 5 دقائق كل مساء بعد وضع التحميلة
+            </p>
+          </div>
+        </div>
+        <div class="warning_use_case">
+          <div>
+            <img src="././assets/img/warning.png" alt="">
+          </div>
+          <div>
+            <ul>
+              <li>لا يجب وضعها في المبرد</li>
               <li>
-                يبقي على الرطوبة والأحماض الدهنية لمؤخرة أكثر صحة و امتلاء
+                الابتعاد عن المشي حافية
               </li>
               <li>
-                يحفز تخزين الدهون و يثير نمو العضلات في المناطق المستهدفة
+                المرجو البعد عن المشروبات الباردة و الغازية
               </li>
               <li>
-                ينعم و يشدّ الطبقات العليا للبشرة فينقص السيلوليت وعلامات
-                التمدد
+                اثناء الدورة الشهرية يفضل التوقف عن استعمال التحاميل حتى تنتهي فترة الحيض
               </li>
             </ul>
-          </div>
-          <img class="sec5__woman" src="./assets/img/sec5__woman.png" />
-        </div>
-        <div class="para_sec5">
-          <p>
-            لا زيادة في الوزن :
-            <br />
-            يستهدف المنتج مؤخرتك فقط فيعمل على تكبيرها و
-            رفعها.
-            <br />
-            احصلي على مؤخرة كبيرة، مستديرة و جذابة في وقت سريع جدا يجعل مؤخرتك
-            تبدو أكثر سلاسة و أكثر تناسقاُ وأفضل من أي وقت مضى!
-          </p>
-        </div>
-      </div>
-      <div class="forum_sect">
-        <div class="forum_sect_para">
-          <p>
-            أحلامك في الحصول على مؤخرة أكبر لم تعد محض خيال.
-            <br />
-            تمتعي بمؤخرة جميلة و قوية ومتناسقة بفضل التركيبة الفريدة للتحاميل السحرية حيث
-            يمكنك أن تلاحظي شدا أكبر و مظهرا أروع في أقل من أسبوعين.
-          </p>
-        </div>
-        <div class="_child">
-          <div>
-            <form id="request-form">
-              <div>
-                <h4>السعر القديم 898 درهم</h4>
-                <h3>السعر الجديد 449 درهم</h3>
-              </div>
-              <div>
-                <input type="text" name="Fullname" id="Fullname" placeholder="الإسم الكامل" />
-              </div>
-              <div id="form_handler">
-                <input type="text" name="City" id="City" placeholder="المدينة" />
-              </div>
-              <div>
-                <input type="text" name="Phone" id="Phone" placeholder="رقم الهاتف" />
-              </div>
-              <div>
-                <input name="Date" id="Date" placeholder="" type="hidden" />
-              </div>
-              <div>
-                <button id="submitButton">تأكيد الطلب</button>
-              </div>
-            </form>
           </div>
         </div>
       </div>
     </div>
-    <footer>
-      <div class="first_child_ftr">
-        <div>
-          <img src="././assets/img/akcharLogo.png" width="200" alt="" srcset="" />
+    <div class="sec5">
+      <div class="wrapper">
+        <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
+      </div>
+      <div class="orange">
+        <div class="wrapper">
+          <div class="orange__title">
+            تكبير <span> بمسحة </span><b> واحدة </b><span> فقط </span>
+          </div>
+          <div class="orange__title sec">
+            <span> إليكِ آلية عمل PACK BOOST </span>
+          </div>
+          <ul class="sec5__list">
+            <li>
+              يبقي على الرطوبة والأحماض الدهنية لمؤخرة أكثر صحة و امتلاء
+            </li>
+            <li>
+              يحفز تخزين الدهون و يثير نمو العضلات في المناطق المستهدفة
+            </li>
+            <li>
+              ينعم و يشدّ الطبقات العليا للبشرة فينقص السيلوليت وعلامات
+              التمدد
+            </li>
+          </ul>
         </div>
+        <img class="sec5__woman" src="./assets/img/sec5__woman.png" />
+      </div>
+      <div class="para_sec5">
+        <p>
+          لا زيادة في الوزن :
+          <br />
+          يستهدف المنتج مؤخرتك فقط فيعمل على تكبيرها و
+          رفعها.
+          <br />
+          احصلي على مؤخرة كبيرة، مستديرة و جذابة في وقت سريع جدا يجعل مؤخرتك
+          تبدو أكثر سلاسة و أكثر تناسقاُ وأفضل من أي وقت مضى!
+        </p>
+      </div>
+    </div>
+    <div class="forum_sect">
+      <div class="forum_sect_para">
+        <p>
+          أحلامك في الحصول على مؤخرة أكبر لم تعد محض خيال.
+          <br />
+          تمتعي بمؤخرة جميلة و قوية ومتناسقة بفضل التركيبة الفريدة للتحاميل السحرية حيث
+          يمكنك أن تلاحظي شدا أكبر و مظهرا أروع في أقل من أسبوعين.
+        </p>
+      </div>
+      <div class="_child">
         <div>
-          <p>
-            Copyright © 2022 AKCHAR
-          </p>
+          <form id="request-form">
+            <div>
+              <h4>السعر القديم 898 درهم</h4>
+              <h3>السعر الجديد 449 درهم</h3>
+            </div>
+            <div>
+              <input type="text" name="Fullname" id="Fullname" placeholder="الإسم الكامل" />
+            </div>
+            <div id="form_handler">
+              <input type="text" name="City" id="City" placeholder="المدينة" />
+            </div>
+            <div>
+              <input type="text" name="Phone" id="Phone" placeholder="رقم الهاتف" />
+            </div>
+            <div>
+              <input name="Date" id="Date" placeholder="" type="hidden" />
+            </div>
+            <div>
+              <button id="submitButton">تأكيد الطلب</button>
+            </div>
+          </form>
         </div>
       </div>
-      <hr />
-    </footer>
+    </div>
+  </div>
+  <footer>
+    <div class="first_child_ftr">
+      <div>
+        <img src="././assets/img/akcharLogo.png" width="200" alt="" srcset="" />
+      </div>
+      <div>
+        <p>
+          Copyright © 2022 AKCHAR
+        </p>
+      </div>
+    </div>
+    <hr />
+  </footer>
   </div>
   <script type="text/javascript">
     var deltaDate = new Date();
