--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
       margin-bottom: 70px;
       color: #a12000;
     }
-
     .ac_footer a {
       color: #a12000;
     }
-
     .ac_footer p {
       text-align: center;
     }
-
     img[height="1"],
     img[width="1"] {
       display: none !important;
@@ -53,7 +50,6 @@
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=994532654828730&ev=PageView&noscript=1" /></noscript>
 </head>
-
 <body>
   <div class="contaier">
     <div class="sec2">
@@ -67,7 +63,7 @@
             </div>
           </div>
           <div class="sec2__product">
-            <img src="././assets/img/both.png" alt="">
+            <img src="././assets/img/prodboth.png" alt=""/>
           </div>
           <div class="sec2__list">
             <ul>
@@ -84,15 +80,15 @@
         </div>
       </div>
       <div class="__items clearfix">
-        <img class="sec5__item" src="./assets/img/1.jpg" />
+        <img class="sec5__item" src="./assets/img/aftbr1.jpg" />
+        <img class="sec5__item" src="./assets/img/aftbr1.png" />
+        <img class="sec5__item" src="./assets/img/aftbr2.jpg" />
         <img class="sec5__item" src="./assets/img/sec5_2.png" />
         <img class="sec5__item" src="./assets/img/sec5_3.png" />
         <img class="sec5__item" src="./assets/img/ar1.jpg" />
         <img class="sec5__item" src="./assets/img/sec2_4.jpg" />
         <img class="sec5__item" src="./assets/img/booty_ass_02.gif" />
         <img class="sec5__item" src="./assets/img/ar2.jpg" />
-        <img class="sec5__item" src="./assets/img/nz1s1h.jpg" />
-
       </div>
       <div class="_btn_hnalder exacr">
         <button>أطلبي الآن</button>
@@ -188,7 +184,7 @@
     <div class="sec1">
       <div class="wrapper">
         <img class="sec1__woman" src="./assets/img/woman2.png" /><img class="sec1__rose" src="./assets/img/rose.png" />
-        <img class="sec1__prod" src="./assets/img/both.png" />
+        <img class="sec1__prod" src="./assets/img/pr3g.png" />
         <div class="sec1__right clearfix">
           <div class="sec1__title">
             <span> PACK BOOST </span>
@@ -251,13 +247,12 @@
         </div>
         <div class="sec3__prod">
           <img class="sec3__prod-img sec3__prod-img--1" width="200" src="./assets/img/rose.png" /><img
-            class="sec3__prod-img sec3__prod-img--2" src="./assets/img/both.png" /><img
+            class="sec3__prod-img sec3__prod-img--2" src="./assets/img/pr3g.png" /><img
             class="sec3__prod-img sec3__prod-img--3" src="./assets/img/nuts.png" />
         </div>
         <img class="sec3__woman" src="./assets/img/woman2.png" />
       </div>
     </div>
-   
     <div class="howtouse">
       <div>
         <h1>
@@ -274,7 +269,7 @@
             </h3>
           </div>
           <div class="prod_handler_first">
-            <img src="./assets/img/LUBI_SUPPO-1.png" alt="">
+            <img src="./assets/img/LUBI_SUPPO-1.png" alt=""/>
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -289,7 +284,7 @@
             </h3>
           </div>
           <div class="prod_handler_first">
-            <img src="./assets/img/suppnat.png" alt="">
+            <img src="./assets/img/suppnat.png" alt=""/>
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -304,7 +299,7 @@
             </h3>
           </div>
           <div class="prod_handler_first">
-            <img src="./assets/img/hip_up.png" alt="">
+            <img src="./assets/img/hip_up.png" alt=""/>
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -319,7 +314,7 @@
             </h3>
           </div>
           <div class="prod_handler">
-            <img src="././assets/img/oil.png" alt="">
+            <img src="././assets/img/oil.png" alt=""/>
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -329,7 +324,7 @@
         </div>
         <div class="warning_use_case">
           <div>
-            <img src="././assets/img/warning.png" alt="">
+            <img src="././assets/img/warning.png" alt=""/>
           </div>
           <div>
             <ul>
@@ -399,6 +394,9 @@
       <div class="_child">
         <div>
           <form id="request-form">
+            <div>
+              <img src="./assets/img/pr2.png" alt="">
+            </div>
             <div>
               <h4>السعر القديم 898 درهم</h4>
               <h3>السعر الجديد 449 درهم</h3>
