--- a/success.html
+++ b/success.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/thannksPage.css" />
-    <link rel="shortcut icon" href="./assets/img/akcharLogo.png" type="image/x-icon" />
-    <title>PACK BOOST</title>
-    <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-            n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '994532654828730');
-        fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-            src="https://www.facebook.com/tr?id=994532654828730&ev=PageView&noscript=1" /></noscript>
-</head>
+<body lang="en">
 
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/thannksPage.css" />
+        <link rel="shortcut icon" href="./assets/img/akcharLogo.png" type="image/x-icon" />
+        <title>PACK BOOST</title>
+        <script>
+            !function (f, b, e, v, n, t, s) {
+                if (f.fbq) return; n = f.fbq = function () {
+                    n.callMethod ?
+                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                };
+                if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+                n.queue = []; t = b.createElement(e); t.async = !0;
+                t.src = v; s = b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s)
+            }(window, document, 'script',
+                'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '994532654828730');
+            fbq('track', 'PageView');
+        </script>
+        <noscript>
+            <img height="1" width="1" style="display:none"
+                src="https://www.facebook.com/tr?id=994532654828730&ev=PageView&noscript=1" />
+        </noscript>
+    </head>
     <div class="parent">
         <h1 style="color:#45B5A0 ">PACK BOOST</h1>
         <p>نشكركم على طلبكم و ثقتكم</p>
@@ -39,11 +40,11 @@
             <button id="btn_back">الرجوع</button>
         </div>
     </div>
+    <script>
+        document.getElementById("btn_back").addEventListener("click", () => {
+            window.history.back();
+        });
+    </script>
 </body>
-<script>
-    document.getElementById("btn_back").addEventListener("click", () => {
-        window.history.back();
-    });
-</script>
 
 </html>
