--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
       margin-bottom: 70px;
       color: #a12000;
     }
+
     .ac_footer a {
       color: #a12000;
     }
+
     .ac_footer p {
       text-align: center;
     }
+
     img[height="1"],
     img[width="1"] {
       display: none !important;
@@ -50,6 +53,7 @@
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=994532654828730&ev=PageView&noscript=1" /></noscript>
 </head>
+
 <body>
   <div class="contaier">
     <div class="sec2">
@@ -63,7 +67,7 @@
             </div>
           </div>
           <div class="sec2__product">
-            <img src="././assets/img/prodboth.png" alt=""/>
+            <img src="././assets/img/prodboth.png" alt="" />
           </div>
           <div class="sec2__list">
             <ul>
@@ -92,6 +96,23 @@
       </div>
       <div class="_btn_hnalder exacr">
         <button>أطلبي الآن</button>
+      </div>
+    </div>
+    <div>
+      <script src="https://fast.wistia.com/embed/medias/6hdavgxcd3.jsonp" async></script>
+      <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+      <div class="wistia_responsive_padding" style="padding:189.29% 0 0 0;position:relative;">
+        <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+          <div class="wistia_embed wistia_async_6hdavgxcd3 videoFoam=true"
+            style="height:100%;position:relative;width:100%">
+            <div class="wistia_swatch"
+              style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
+              <img src="https://fast.wistia.com/embed/medias/6hdavgxcd3/swatch"
+                style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true"
+                onload="this.parentNode.style.opacity=1;" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="sec4">
@@ -269,7 +290,7 @@
             </h3>
           </div>
           <div class="prod_handler_first">
-            <img src="./assets/img/LUBI_SUPPO-1.png" alt=""/>
+            <img src="./assets/img/LUBI_SUPPO-1.png" alt="" />
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -284,7 +305,7 @@
             </h3>
           </div>
           <div class="prod_handler_first">
-            <img src="./assets/img/suppnat.png" alt=""/>
+            <img src="./assets/img/suppnat.png" alt="" />
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -299,7 +320,7 @@
             </h3>
           </div>
           <div class="prod_handler_first">
-            <img src="./assets/img/hip_up.png" alt=""/>
+            <img src="./assets/img/hip_up.png" alt="" />
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -314,7 +335,7 @@
             </h3>
           </div>
           <div class="prod_handler">
-            <img src="././assets/img/oil.png" alt=""/>
+            <img src="././assets/img/oil.png" alt="" />
           </div>
           <div class="para_how_prod_works">
             <p>
@@ -324,7 +345,7 @@
         </div>
         <div class="warning_use_case">
           <div>
-            <img src="././assets/img/warning.png" alt=""/>
+            <img src="././assets/img/warning.png" alt="" />
           </div>
           <div>
             <ul>
