--- a/index.html
+++ b/index.html
@@ -56,21 +56,15 @@
 
 <body>
   <div class="contaier">
-    <div>
-      <script src="https://fast.wistia.com/embed/medias/6hdavgxcd3.jsonp" async></script>
-      <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
-      <div class="wistia_responsive_padding" style="padding:189.29% 0 0 0;position:relative;">
-        <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-          <div class="wistia_embed wistia_async_6hdavgxcd3 videoFoam=true"
-            style="height:100%;position:relative;width:100%">
-            <div class="wistia_swatch"
-              style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
-              <img src="https://fast.wistia.com/embed/medias/6hdavgxcd3/swatch"
-                style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true"
-                onload="this.parentNode.style.opacity=1;" />
-            </div>
-          </div>
-        </div>
+    <div class="vid">
+      <div>
+        <script src="https://fast.wistia.com/embed/medias/6hdavgxcd3.jsonp" async></script>
+        <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span
+          class="wistia_embed wistia_async_6hdavgxcd3 popover=true popoverAnimateThumbnail=true"
+          style="display:inline-block;height:400px;position:relative;width:320px">&nbsp;</span>
+      </div>
+      <div class="_btn_hnalder  vid_btn">
+        <button>أطلبي الآن مع تخفيض %50 من السعر القديم</button>
       </div>
     </div>
     <div class="sec2">
@@ -115,7 +109,7 @@
         <button>أطلبي الآن</button>
       </div>
     </div>
-   
+
     <div class="sec4">
       <div class="wrapper">
         <div class="title">مكونات PACK BOOST</div>
