--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta content="ie=edge" http-equiv="X-UA-Compatible" />
   <link href="./assets/img/akcharLogo.png" rel="shortcut icon" type="image/png" />
   <link href="./assets/css/normalize.css" rel="stylesheet" />
-  <link href="./assets/css/main.css" rel="stylesheet" />
+  <link href="./assets/css/deltaStyle.css" rel="stylesheet" />
   <title>PACK BOOST</title>
   <script>
     !function (f, b, e, v, n, t, s) {
@@ -114,7 +114,7 @@
         <div class="first_prod">
           <div>
             <h3>
-              طريقة إستعمال كريم التحاميل
+                كريم التحاميل
             </h3>
           </div>
           <div class="prod_handler_first">
@@ -126,10 +126,10 @@
             </p>
           </div>
         </div>
-        <div class="first_prod">
+        <div class="first_prod ta7a">
           <div>
             <h3>
-              طريقة إستعمال التحاميل
+                التحاميل
             </h3>
           </div>
           <div class="prod_handler_first">
@@ -141,10 +141,10 @@
             </p>
           </div>
         </div>
-        <div class="first_prod">
+        <div class="first_prod ardaf">
           <div>
             <h3>
-              طريقة إستعمال كريم الأرداف
+                كريم تكبير الأرداف
             </h3>
           </div>
           <div class="prod_handler_first">
@@ -159,7 +159,7 @@
         <div class="second_prod">
           <div>
             <h3>
-              طريقة إستعمال زيت المعجزة
+                زيت التسمين المعجزة
             </h3>
           </div>
           <div class="prod_handler">
@@ -167,7 +167,7 @@
           </div>
           <div class="para_how_prod_works">
             <p>
-              ضع الزيت على بشرة نظيفة عن طريق التدليك بحركة دائرية على الوركين لمدة 5 دقائق كل مساء بعد وضع التحميلة
+              ضعي الزيت على بشرة نظيفة عن طريق التدليك بحركة دائرية على الوركين لمدة 5 دقائق كل مساء بعد وضع التحميلة
             </p>
           </div>
         </div>
