--- a/index.html
+++ b/index.html
@@ -263,7 +263,6 @@
     <div class="sec1">
       <div class="wrapper">
         <img class="sec1__woman" src="./assets/img/woman2.png" /><img class="sec1__rose" src="./assets/img/rose.png" />
-        <img class="sec1__prod" src="./assets/img/pr3g.png" />
         <div class="sec1__right clearfix">
           <div class="sec1__title">
             <span> PACK BOOST </span>
@@ -291,6 +290,9 @@
           <button>أطلبي الآن</button>
         </div>
       </div>
+      <div class="sect_1prod">
+        <img src="./assets/img/pr3g.png" alt="">
+      </div>
     </div>
     <div class="sec3">
       <div class="wrapper">
@@ -313,26 +315,15 @@
             إثارة
           </li>
         </ul>
-        <div class="sec3__warning">
-          <div class="sec3__warning-text">
-            <div class="sec3__warning-title">لا يمكنك التوقف عن هز هذه المؤخرة!</div>
-            تسمح لك تركيبتنا المصممة خصيصًا بالحصول على الشكل الذي تحلمين به
-            عن طريق الحد من ظهور عيوب الجلد الناتجة عن فقدان الكولاجين ومن
-            خلال تعزيز شكل و وقوة عضلات مؤخرتك.
-          </div>
-        </div>
+      
         <div class="_btn_hnalder">
           <button>أطلبي الآن مع تخفيض %50</button>
         </div>
-        <div class="sec3__prod">
-          <img class="sec3__prod-img sec3__prod-img--1" width="200" src="./assets/img/rose.png" /><img
-            class="sec3__prod-img sec3__prod-img--2" src="./assets/img/pr3g.png" /><img
-            class="sec3__prod-img sec3__prod-img--3" src="./assets/img/nuts.png" />
-        </div>
-        <img class="sec3__woman" src="./assets/img/woman2.png" />
       </div>
     </div>
-   
+    <div class="sect_1prod sce5d">
+      <img src="./assets/img/pr3g.png" alt="">
+    </div>
     <div class="sec5">
       <div class="wrapper">
         <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
