--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
         </div>
       </div>
     </div>
+    <div  class="sect_1prod elog es">
+      <img src="./assets/img/pr2.png"  alt="">
+    </div>
     <div class="sec1">
       <div class="wrapper">
         <img class="sec1__woman" src="./assets/img/woman2.png" /><img class="sec1__rose" src="./assets/img/rose.png" />
@@ -290,9 +293,6 @@
           <button>أطلبي الآن</button>
         </div>
       </div>
-      <div class="sect_1prod">
-        <img src="./assets/img/pr3g.png" alt="">
-      </div>
     </div>
     <div class="sec3">
       <div class="wrapper">
@@ -321,8 +321,8 @@
         </div>
       </div>
     </div>
-    <div class="sect_1prod sce5d">
-      <img src="./assets/img/pr3g.png" alt="">
+    <div  class="sect_1prod elog es">
+      <img src="./assets/img/pr2.png"  alt="">
     </div>
     <div class="sec5">
       <div class="wrapper">
