--- a/index.html
+++ b/index.html
@@ -379,6 +379,13 @@
               <img src="./assets/img/pr2.png" alt="">
             </div>
             <div>
+              <p>
+                حزمة كاملة مكونة من أربع منتوجات لضمان الفعالية و النتيجة في مذة قصيرة
+              <br/>
+              فقط ب449 درهم بدون مصاريف التوصيل
+              </p>
+            </div>
+            <div>
               <h4>السعر القديم 898 درهم</h4>
               <h3>السعر الجديد 449 درهم</h3>
             </div>
